--- a/CustomMacroFactory/MainWindow/MainWindow.xaml
+++ b/CustomMacroFactory/MainWindow/MainWindow.xaml
@@ -27,7 +27,7 @@
         SizeToContent="WidthAndHeight"
         ShowInTaskbar="True" 
         
-        Title="MainWindow" 
+        Title="MacroWindow" 
         Loaded="Window_Loaded"
         Closing="Window_Closing"
         
