--- a/CustomMacroFactory/MainView/CustomControlPreView.xaml
+++ b/CustomMacroFactory/MainView/CustomControlPreView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="CustomMacroFactory.MainWindow.CustomControlPreView"
+﻿<UserControl x:Class="CustomMacroFactory.MainView.CustomControlPreView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CustomMacroFactory.MainWindow"
+             xmlns:local="clr-namespace:CustomMacroFactory.MainView"
              xmlns:AttachedProperty="clr-namespace:CustomMacroBase.Helper.Extensions;assembly=CustomMacroBase"
              
              xmlns:ConsoleListBoxEx="clr-namespace:CustomMacroBase.CustomControlEx.ConsoleListBoxEx;assembly=CustomMacroBase" 
@@ -80,12 +80,12 @@
                                                           BackgroundColor="#210F19" 
                                                           BackgroundCornerRadius="2.5"/>
                         <colorfultextblockex:cColorfulTextBlock Text="cColorfulTextBlock"
-                                                              TextBaseColor="Transparent"
-                                                              TextHorizontalAlignment="Center"
-                                                              TextVerticalAlignment="Center"
-                                                              BackgroundColor="#210F19"
-                                                              BackgroundCornerRadius="2.5"
-                                                              MaskBackgroundColor="Transparent"/>
+                                                                TextBaseColor="Transparent"
+                                                                TextHorizontalAlignment="Center"
+                                                                TextVerticalAlignment="Center"
+                                                                BackgroundColor="#210F19"
+                                                                BackgroundCornerRadius="2.5"
+                                                                MaskBackgroundColor="Transparent"/>
                         
                     </StackPanel>
                 </scrollviewerex:cScrollViewer>
