--- a/CustomMacroFactory/MainView/MainWindow.xaml
+++ b/CustomMacroFactory/MainView/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="CustomMacroFactory.MainWindow.MainWindow"
+﻿<Window x:Class="CustomMacroFactory.MainView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CustomMacroFactory.MainWindow"
+        xmlns:local="clr-namespace:CustomMacroFactory.MainView"
         
-        xmlns:TitleBarEx="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.TitleBarEx" 
-        xmlns:RainbowLineEx="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.RainbowLineEx" 
-        xmlns:ClientEx="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.ClientEx" 
+        xmlns:TitleBarEx="clr-namespace:CustomMacroFactory.MainView.UserControlEx.TitleBarEx" 
+        xmlns:RainbowLineEx="clr-namespace:CustomMacroFactory.MainView.UserControlEx.RainbowLineEx" 
+        xmlns:ClientEx="clr-namespace:CustomMacroFactory.MainView.UserControlEx.ClientEx" 
         
         mc:Ignorable="d"
         SnapsToDevicePixels="True" 
@@ -38,12 +38,17 @@
         <local:RectConverter x:Key="RectConverter"/>
         <local:BorderBrushConverter x:Key="BorderBrushConverter"/>
     </Window.Resources>
+    <d:Window.DataContext>
+        <local:MainWindow_viewmodel/>
+    </d:Window.DataContext>
     
     <Grid>
         <!--BorderBrush="DimGray"-->
         <Border x:Name="PART_Border" BorderThickness="1" CornerRadius="5" 
                 Margin="0" Panel.ZIndex="2"
-                BorderBrush="{Binding IsActive, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Converter={StaticResource BorderBrushConverter}}"
+                BorderBrush="{Binding IsActive, 
+                                      RelativeSource={RelativeSource AncestorType={x:Type Window}}, 
+                                      Converter={StaticResource BorderBrushConverter}}"
                 d:BorderBrush="AliceBlue">
         </Border>
 
@@ -71,17 +76,17 @@
 
             <!--标题栏-->
             <Border Grid.Row="0" x:Name="Chrome">
-                <TitleBarEx:uTitleBar IsActive="{Binding IsActive, RelativeSource={RelativeSource AncestorType={x:Type Window}},Mode=OneWay}"/>
+                <ContentControl Content="{Binding TitleBarView}"/>
             </Border>
 
             <!--分界线-->
             <Border Grid.Row="1">
-                <RainbowLineEx:uRainbowLine/>
+                <ContentControl Content="{Binding RainbowLineView}"/>
             </Border>
 
             <!--客户区-->
             <Border Grid.Row="2" x:Name="Client">
-                <ClientEx:uClient/>
+                <ContentControl Content="{Binding ClientView}"/>
             </Border>
         </Grid>
     </Grid>
