--- a/CustomMacroFactory/MainView/UserControlEx/ClientEx/uClient.xaml
+++ b/CustomMacroFactory/MainView/UserControlEx/ClientEx/uClient.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="CustomMacroFactory.MainWindow.UserControlEx.ClientEx.uClient"
+﻿<UserControl x:Class="CustomMacroFactory.MainView.UserControlEx.ClientEx.uClient"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.ClientEx"
+             xmlns:local="clr-namespace:CustomMacroFactory.MainView.UserControlEx.ClientEx"
              xmlns:scrollviewerex="clr-namespace:CustomMacroBase.CustomControlEx.ScrollViewerEx;assembly=CustomMacroBase" 
              xmlns:gridex="clr-namespace:CustomMacroBase.CustomControlEx.GridEx;assembly=CustomMacroBase" 
              xmlns:contextmenuex="clr-namespace:CustomMacroBase.CustomControlEx.ContextMenuEx;assembly=CustomMacroBase"
@@ -68,35 +68,18 @@
                                 <RowDefinition Height="auto"/>
                             </Grid.RowDefinitions>
 
-                            <scrollviewerex:cScrollViewer VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
+                            <scrollviewerex:cScrollViewer Content="{Binding MainMenu}"
+                                                          VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
                                                           BackgroundColor="{StaticResource AreaColor}"
                                                           d:BackgroundColor="IndianRed" 
-                                                          d:ScrollBarBackgroundColor="Gray">
-                                <ItemsControl ItemsSource="{Binding DataContext.TopContent_Left, FallbackValue=Left,RelativeSource={RelativeSource Self}}">
-                                    <ItemsControl.Template>
-                                        <ControlTemplate TargetType="ItemsControl">
-                                            <Border>
-                                                <StackPanel IsItemsHost="True" Orientation="Vertical"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </ItemsControl.Template>
-                                </ItemsControl>
-                            </scrollviewerex:cScrollViewer>
+                                                          d:ScrollBarBackgroundColor="Gray"/>
 
                             <scrollviewerex:cScrollViewer Grid.Row="2"
+                                                          Content="{Binding MainOption}"
                                                           VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
                                                           BackgroundColor="{StaticResource AreaColor}"
                                                           d:BackgroundColor="IndianRed" 
                                                           d:ScrollBarBackgroundColor="Gray">
-                                <ItemsControl ItemsSource="{Binding DataContext.TopContent_LeftEx, FallbackValue=LeftEx,RelativeSource={RelativeSource Self}}">
-                                    <ItemsControl.Template>
-                                        <ControlTemplate TargetType="ItemsControl">
-                                            <Border>
-                                                <StackPanel IsItemsHost="True" Orientation="Vertical"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </ItemsControl.Template>
-                                </ItemsControl>
                             </scrollviewerex:cScrollViewer>
                         </Grid>
                     </Grid>
@@ -106,24 +89,16 @@
                                   ParentModel="{Binding DataContext, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
                                   Visibility="{Binding TopContent_Middle_Hide, Converter={StaticResource uClient_converter_bool2visibility}}"
                                   d:Visibility="Visible">
-                        <scrollviewerex:cScrollViewer VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
+                        <scrollviewerex:cScrollViewer Content="{Binding GameList}"
+                                                      VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
                                                       BackgroundColor="{StaticResource AreaColor}"
                                                       d:BackgroundColor="#44374F"
                                                       d:ScrollBarBackgroundColor="Gray">
-                            <ItemsControl ItemsSource="{Binding DataContext.TopContent_Middle, FallbackValue=Middle,RelativeSource={RelativeSource Self}}">
-                                <ItemsControl.Template>
-                                    <ControlTemplate TargetType="ItemsControl">
-                                        <Border>
-                                            <StackPanel IsItemsHost="True" Orientation="Vertical"/>
-                                        </Border>
-                                    </ControlTemplate>
-                                </ItemsControl.Template>
-                            </ItemsControl>
                         </scrollviewerex:cScrollViewer>
                         <Grid.ContextMenu>
                             <contextmenuex:cContextMenu>
                                 <contextmenuex:cMenuItem Text="{Binding PlacementTarget.ParentModel.MenuItemModelList[0].Text, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"
-                                                         Command="{Binding PlacementTarget.ParentModel.MenuItemModelList[0].HideGameListCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"/>
+                                                         Command="{Binding PlacementTarget.ParentModel.MenuItemModelList[0].Command, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"/>
                             </contextmenuex:cContextMenu>
                         </Grid.ContextMenu>
                     </gridex:cGrid>
@@ -132,19 +107,11 @@
                     <Grid Grid.Column="4"
                           Visibility="{Binding TopContent_Right_Hide, Converter={StaticResource uClient_converter_bool2visibility}}"
                           d:Visibility="Visible">
-                        <scrollviewerex:cScrollViewer VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
+                        <scrollviewerex:cScrollViewer Content="{Binding MacroList}"
+                                                      VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible"
                                                       BackgroundColor="{StaticResource AreaColor}" 
                                                       d:BackgroundColor="DarkSlateBlue" 
                                                       d:ScrollBarBackgroundColor="Gray">
-                            <ItemsControl ItemsSource="{Binding DataContext.TopContent_Right, FallbackValue=RightContent,RelativeSource={RelativeSource Self}}">
-                                <ItemsControl.Template>
-                                    <ControlTemplate TargetType="ItemsControl">
-                                        <Border>
-                                            <StackPanel IsItemsHost="True" Orientation="Vertical"/>
-                                        </Border>
-                                    </ControlTemplate>
-                                </ItemsControl.Template>
-                            </ItemsControl>
                         </scrollviewerex:cScrollViewer>
                     </Grid>
                 </Grid>
@@ -170,36 +137,16 @@
                     <Grid Grid.Row="0"
                           Visibility="{Binding BottomContent_Top_Hide, Converter={StaticResource uClient_converter_bool2visibility}}"
                           d:Visibility="Visible">
-                        <Border Background="{StaticResource AreaColor}" d:Background="LightSteelBlue"
-                                CornerRadius="0,0,2.5,2.5">
-                            <ItemsControl ItemsSource="{Binding DataContext.BottomContent_Top, FallbackValue=RightContent,RelativeSource={RelativeSource Self}}">
-                                <ItemsControl.Template>
-                                    <ControlTemplate TargetType="ItemsControl">
-                                        <Border CornerRadius="0,0,3,3">
-                                            <StackPanel IsItemsHost="True" d:Orientation="Horizontal"/>
-                                        </Border>
-                                    </ControlTemplate>
-                                </ItemsControl.Template>
-                            </ItemsControl>
-                        </Border>
+                        <ContentControl Content="{Binding SnapshotArea}" Background="{StaticResource AreaColor}" d:Background="LightSteelBlue"/>
                     </Grid>
                     
                     <!--下-->
                     <Grid Grid.Row="1"
                           Visibility="{Binding BottomContent_Bottom_Hide, Converter={StaticResource uClient_converter_bool2visibility}}"
                           d:Visibility="Visible">
-                        <scrollviewerex:cScrollViewer VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible" 
+                        <scrollviewerex:cScrollViewer Content="{Binding LogArea}" VerticalScrollBarVisibility="Auto" d:VerticalScrollBarVisibility="Visible" 
                                                       BackgroundColor="{StaticResource AreaColor}" d:BackgroundColor="DarkOrange" d:ScrollBarBackgroundColor="Gray"
                                                       BackgroundCornerRadius="0,0,3,3">
-                            <ItemsControl ItemsSource="{Binding DataContext.BottomContent_Bottom, FallbackValue=RightContent,RelativeSource={RelativeSource Self}}">
-                                <ItemsControl.Template>
-                                    <ControlTemplate TargetType="ItemsControl">
-                                        <Border>
-                                            <StackPanel IsItemsHost="True" Orientation="Vertical"/>
-                                        </Border>
-                                    </ControlTemplate>
-                                </ItemsControl.Template>
-                            </ItemsControl>
                         </scrollviewerex:cScrollViewer>
                     </Grid>
                 </Grid>
