--- a/CustomMacroFactory/MainView/UserControlEx/PixelPicker/uPixelPicker.xaml
+++ b/CustomMacroFactory/MainView/UserControlEx/PixelPicker/uPixelPicker.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="CustomMacroFactory.MainWindow.UserControlEx.PixelPicker.uPixelPicker"
+﻿<UserControl x:Class="CustomMacroFactory.MainView.UserControlEx.PixelPicker.uPixelPicker"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.PixelPicker"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:local="clr-namespace:CustomMacroFactory.MainView.UserControlEx.PixelPicker" 
              mc:Ignorable="d"
              ClipToBounds="True"
              Visibility="{Binding Visibility}"
@@ -14,7 +15,30 @@
     <d:UserControl.DataContext>
         <local:uPixelPicker_viewmodel/>
     </d:UserControl.DataContext>
-
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="PreviewMouseRightButtonUp">
+            <i:InvokeCommandAction Command="{Binding PreviewMouseRightButtonUpCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
+            <i:InvokeCommandAction Command="{Binding PreviewMouseLeftButtonDownCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="PreviewMouseLeftButtonUp">
+            <i:InvokeCommandAction Command="{Binding PreviewMouseLeftButtonUpCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="MouseEnter">
+            <i:InvokeCommandAction Command="{Binding MouseEnterCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="MouseLeave">
+            <i:InvokeCommandAction Command="{Binding MouseLeaveCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="MouseMove">
+            <i:InvokeCommandAction Command="{Binding MouseMoveCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    
     <Grid>
         <!--Background-->
         <Rectangle>
