--- a/CustomMacroFactory/MainView/MainWindow.xaml
+++ b/CustomMacroFactory/MainView/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomMacroFactory.MainView"
         
@@ -24,12 +25,9 @@
         ResizeMode="CanMinimize"
         
         HorizontalAlignment="Left" 
-        SizeToContent="WidthAndHeight"
         ShowInTaskbar="True" 
         
         Title="MacroWindow" 
-        Loaded="Window_Loaded"
-        Closing="Window_Closing"
         
         MinWidth="233"
         MinHeight="423"
@@ -41,6 +39,17 @@
     <d:Window.DataContext>
         <local:MainWindow_viewmodel/>
     </d:Window.DataContext>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction Command="{Binding ClosingCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="PreviewKeyDown">
+            <i:InvokeCommandAction Command="{Binding PreviewKeyDownCommand}" PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     
     <Grid>
         <!--BorderBrush="DimGray"-->
@@ -76,17 +85,17 @@
 
             <!--标题栏-->
             <Border Grid.Row="0" x:Name="Chrome">
-                <ContentControl Content="{Binding TitleBarView}"/>
+                <ContentControl Content="{Binding ViewList[0]}"/>
             </Border>
 
             <!--分界线-->
             <Border Grid.Row="1">
-                <ContentControl Content="{Binding RainbowLineView}"/>
+                <ContentControl Content="{Binding ViewList[1]}"/>
             </Border>
 
             <!--客户区-->
-            <Border Grid.Row="2" x:Name="Client">
-                <ContentControl Content="{Binding ClientView}"/>
+            <Border Grid.Row="2">
+                <ContentControl Content="{Binding ViewList[2]}"/>
             </Border>
         </Grid>
     </Grid>
